--- a/page_ne.html
+++ b/page_ne.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>猫寺</title>
+  <title>越前かるた-猫寺</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/ne.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,142 @@
        <h2>ね　：　猫と遊ぼう　御誕生寺</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>猫好きなら一度は行きたい！たくさんの猫が集まるお寺</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/猫寺.jpg">
+     </div>
+
+     <div class="page-setumei">
+      <p>仁愛大学の近くにあるお寺「御誕生寺(ごたんじょうじ)」！<br>
+      猫好きなら一度は訪れてほしいと言われるほど、猫がたくさんいるお寺で、地元の人には「猫寺(ねこでら)」と呼ばれてます。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>なぜたくさん猫が？</p>
     </div>
+    <div class="hitokoto">
+     <p>お寺の建設中に住み着いた！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/御誕生寺.jpg">
+    </div>
+
+    <div class="page-setumei">
+     <p>本堂が完成したのは2009年ですが、お寺の建設中に捨て猫が4匹住み着き、猫好きだった住職(じゅうしょく)さんが保護(ほご)したことがきっかけです。<br><br>
+     そこから猫が増えていき、1番多い時にはなんと80匹の猫をお世話していたそうです。(今は約30匹)<br>
+     <br>
+     2013年頃からフェイスブックやブログなどで里親探しを始め、3年間で300匹以上の猫と里親の縁を結んできました。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>珍しい大仏がある？</p>
+    </div>
+    <div class="hitokoto">
+     <p>大仏と猫のコラボ！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/猫寺像.jpg">
+    </div>
+
+    <div class="page-setumei">
+     <p>本堂の前には全長7ｍの大きな大仏の像があります。<br>が！その像の膝の上を見ると…なんと猫が！<br>
+     <br>
+     大仏と猫が一緒に彫られているなんて、世界でもここだけではないでしょうか？<br>
+     <br>
+     いつか全ての猫たちが里親を見つけて静かなお寺になったとき、この大仏が「猫寺」のシンボルになってくれますようにと願いがこめられています。
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>何ができるの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>猫をなでたり、写真を撮(と)ったり！</p>
+    </div>
+    <div class="shasin">
+      <img src="pageimages/猫５.jpg">
+    </div>
+
+    <div class="page-setumei">
+     <p>全国の猫好きたちが年間3万人訪れ、猫の撮影(さつえい)や見学ツアーも受け入れているので、お寺にいる猫は自由になでたり、写真を撮ったりすることができます。<br>
+     ※おやつは禁止(肥満防止)<br>
+     ※追いかけまわす、執拗にかまうの禁止
+     
+     </p>
+     </div>
+
+     <div class="shasin">
+        <p>▼こんなに近くで写真が撮れます！</p>
+        <img src="pageimages/猫３.jpg">
+     </div>  
+
+     <br>
+
+      <div class="page-setumei">
+     <p> 朝7時と午後3：30は猫たちのお食事タイムなのでオススメです！<br>
+     <br>
+     また、猫にちなんださまざまな取り組みがされています。<br><br>
+
+     ★猫の医療募金(いりょうぼきん)<br>
+     避妊(ひにん)手術や病気の治療などはお寺が負担しているので、食事や医療費の足しに、招き猫の募金箱が設置されています。<br>
+     <br>
+     ★オリジナル御朱印帳(ごしゅいんちょう)<br>
+     猫柄のかわいい御朱印帳をかうことができます！<br>
+     <br>
+     ★招き猫おみくじ<br>
+     招き猫が今後の運勢(うんせい)を教えてくれる…⁉
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>お問い合わせ</p>
+    </div>
+    <div class="hitokoto">
+     <p>0778-43-6081</p>
+    </div>
+    <div class="page-setumei">
+     <p>
+      住所　≫　越前市庄田町32 <br>
+      料金　≫　見学無料<br>
+      電話　≫　0778-43-6081<br>
+      <br>
+      猫の受け入れはしていません。捨て猫はダメ！
+     </p>
+    </div>
+    
+
+
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>「犬も猫も飼っていない、動物初心者の私が行っても大丈夫かな…」と思っていたのですが、猫さんたちは近づいても逃げることはなく、恐る恐る撫でてみても「勝手にどうぞ」状態で笑ってしまいました(笑)数10分だけでも4匹の猫さんは撫でることができたので、猫好きの方も、普段猫と触れ合えない方もぜひ行ってみてください！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
   </div><div class="access">
     <h1>アクセス</h1>
