い　ブラジル

--- a/page_i.html
+++ b/page_i.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ブラジル人</title>
+  <title>越前かるた-ブラジル人</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/i.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,107 @@
        <h2>い　：　一緒に素敵な街にしよう　ブラジルの方よろしくね</h2>
      </div>
 
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>越前市にはブラジルの人がたくさん住んでいる！</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/ブラジル国旗.jpg">
+     </div>
+
+     <div class="page-setumei">
+      <p>越前市にはブラジルの方が多いというのを知っていましたか？<br>
+     越前かるたの「3つの”ぎゅっ”」の2番目、「人と人をつなぐ握手(あくしゅ)の”ぎゅっ”」も、越前市の人とブラジルの人をつなぎたいという思いからきています。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>どのくらい多いの？</p>
     </div>
+    <div class="hitokoto">
+     <p>越前市に住む外国人の7割がブラジル人！</p>
+    </div>
+    <div class="page-setumei">
+     <p>平成30年10月では越前市に住む外国人の人数は4262人でしたが、その中でも3045人がブラジルの方でした！<br>
+    これだけたくさんのブラジル人が住んでいるのは全国でもトップクラスです！
+     </p>
+    </div>
+    <br>
+    <div class="shasin">
+      <p>▼越前市に住む外国人についてのグラフ<br>
+        　(青い色がブラジル人です)
+      </p>
+      <img src="pageimages/ブラジルグラフ.png">
+      <p>越前市, 2019, 『越前市多文化共生推進プラン』, p. 15 より引用</p>
+    </div>
+
+
+     <div class="balloon2-right">
+      <p>なぜそんなに多いの？</p>
+    </div>
+    <div class="hitokoto">
+     <p>越前市で働いている人が多いから！</p>
+    </div>
+    <div class="page-setumei">
+     <p>越前市には大きな工場がいくつかあり、そこで働く人とその家族が多いからです。<br>
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>ブラジルのお店？</p>
+    </div>
+    <div class="hitokoto">
+     <p>Mr.MARKET(ミスターマーケット)</p>
+    </div>
+    <div class="omise">
+      <img src="pageimages/ミスターマーケット.png">
+      <img src="pageimages/ミスターマーケット棚.jpg">
+    </div>
+    <div class="page-setumei">
+     <p>ブラジルの方が多いことで、ブラジルのものを取り扱うお店も増えてきています。「Mr.MARKET(ミスターマーケット)」ではブラジルやフィリピンなどの食材や日用品を売っています。<br>
+      <br>
+      住所　　　≫　越前市日野美1-3-20<br>
+      　　　　　　　西部開発第2ビル1階 <br>
+      営業時間　≫　8：30～21：30<br>
+      定休日　　≫　年中無休<br>
+      電話　　　≫　0778-24-1581<br>
+     </p>
+    </div>
+
+
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>街を歩いていても何度がすれ違いますし、アルバイト先でもよくお見掛けしますね。最近は外国の方向けの体験事業が増えてきて、交流が多くなりつつあるのがうれしいです。この越前かるたも、読み札にふりがなをふったり、サイトにポルトガル語翻訳をつけたりと、ブラジルをはじめ外国の子供たちにも楽しんでもらいたいと工夫を凝らしました！</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
+
+   <div class="access">
+    <h1>アクセス</h1>
+
+   <div class="map">
+     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d6463.942385695256!2d136.15066943488767!3d35.898721200000004!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5ff8ac4fa6c10a97%3A0x32548f1d9f6d4d53!2z77yI5qCq77yJ77yt77yp77yz77y077yl77yy44O777yt77yh77yy77yr77yl77y0!5e0!3m2!1sja!2sjp!4v1605719854725!5m2!1sja!2sjp" 
+      width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+   </div>
+   </div>
 
     <hr>
 
