--- a/page_si.html
+++ b/page_si.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>日野川</title>
+  <title>越前かるた-日野川</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/si.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,114 @@
        <h2>し　：　市をつなぐ　一級河川　日野川だ</h2>
      </div>
 
+
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>越前市を流れるゆたかな川</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/日野川.png">
+     </div>
+
+     <div class="page-setumei">
+      <p>日野川は南越前町の夜叉ケ池を水源とする川です。<br>
+        越前市から福井方面へ向かって流れています。
+      </p>
+     </div>
+
+
+     <div class="balloon2-right">
+      <p>一級河川とは？</p>
     </div>
+    <div class="hitokoto">
+     <p>流れている範囲が大きくて、生活に重要な川</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+       「一級河川(いっきゅうかせん)」とは、川が流れている面積(分岐後も含めます)が大きい川の中で、安全面や生活に必要な水資源として国土交通省(こくどこうつうしょう)に認められた川のことをいいます。<br>
+       <br>
+       ちなみに「二級河川(にきゅうかせん)」は、流れている面積が小さい中で重要度が高く、都道府県知事(とどうふけんちじ)が指定した川のことです。
+     </p>
+    </div>
+
+
+     <div class="balloon2-right">
+      <p>橋はいくつ？</p>
+    </div>
+    <div class="hitokoto">
+     <p>越前市内の橋は全部で8つ</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+       ・府中(ふちゅう)大橋…県道212号<br>
+       ・豊(ゆたか)橋…武生高校のそば<br>
+       ・万代(ばんだい)橋…第三中学校の近く、柱がある<br>
+       ・帆山(ほやま)橋…県道19号<br>
+       ・日野大橋<br>
+       ・武生大橋…国道８号<br>
+       ・ほがらか橋…県道136号<br>
+       ・日之出(ひので)橋
+     </p>
+    </div>
+
+
+    <div class="balloon2-right">
+      <p>公園がある？</p>
+    </div>
+    <div class="hitokoto">
+     <p>日野川河川緑地公園(ひのがわかせんりょくちこうえん)</p>
+    </div>
+
+    <div class="page-setumei">
+     <p>
+      となりにある村国山と日野川河川敷地の調和をはかることにより、水と緑に親しむ市民の憩いの場として整備された都市公園です。<br>
+      主な施設としてイベント広場、BBQエリア、駐車場、芝生広場、自由広場、ゲートボール場、ローラースケート場、トイレ、園路などがあります。
+     </p>
+    </div>
+    <div class="official-site">
+      <a href="https://e-parks.jp/hinogawa/" class="btn btn--red btn--radius btn--cubic">日野川緑地公園　
+        詳しくはこちら<i class="fas fa-angle-right fa-position-right"></i></a>
+    </div>
+    <br>
+    <div class="shasin">
+      <p>▼公園内マップ</p>
+      <img src="pageimages/日野川公園内マップ.jpg">
+    </div>
+
+
+    </div>
+
+
+     <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>駅までの道のりで何度も見ていますし、母校のマラソン大会は日野川の周りをぐるっと走りました。台風が来ても特に氾濫も何もなく平和な川だなぁと思ったり…(近づくのは危ないのでやめましょう)</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
+
+    <div class="access">
+      <h1>アクセス</h1>
+
+     <div class="map">
+       <iframe src="https://www.google.com/maps/d/embed?mid=1VDobafMbuxOaRlVfcBg2G_0J6GuX2W8s" 
+        width="100%" height="300" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+     </div>
+   </div>
 
     <hr>
 
