--- a/page_hu.html
+++ b/page_hu.html
@@ -3,14 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>武生ばやし</title>
+  <title>越前かるた-武生ばやし</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
+  <link rel="stylesheet" href="css/hu.css">
 </head>
 
 <body>
   <header class="site-header">
+    <div class="icon">
+      <p><img src="images/アイコン.jpg"></p>
+    </div>
     <h1>
       <a href="index.html">越前かるた</a>
     </h1>
@@ -57,7 +61,61 @@
        <h2>ふ　：　ふるさとに舞う　夏の踊り子　武生ばやし</h2>
      </div>
 
+
+     <hr>
+
+     <div class="balloon2-right">
+       <p>一言でいうと？</p>
+     </div>
+     <div class="hitokoto">
+      <p>お祭りの定番ふるさと踊り</p>
+     </div>
+     <div class="shasin">
+       <img src="pageimages/武生ばやし.jpg">
+     </div>
+
+     <div class="page-setumei">
+      <p>「こらさっとーどーじゃいなー♪」でおなじみの武生のふるさと踊りです。<br>
+       お祭りに行ったことのある人は聞いたことがあるのではないでしょうか？盆踊り、ふるさと踊りでよく流れるナンバーです。<br><br>
+       ▼武生ばやしの様子
+      </p>
+     </div>
+     <iframe width="560" height="315" src="https://www.youtube.com/embed/7ARxx1MowNw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+
+     <div class="balloon2-right">
+      <p>どうしてできたの？</p>
     </div>
+    <div class="hitokoto">
+     <p>地元の人が気軽に歌える歌を作るため</p>
+    </div>
+    <div class="page-setumei">
+     <p>今から約64年前に「武生には手軽に歌える民謡調の歌がない」ということで作られました。<br><br>
+      作曲：古賀政男氏<br>
+      　　　(美空ひばりさんなどに楽曲を作っていた)<br>
+      歌手：島倉千代子さん
+     </p>
+    </div>
+
+
+    </div>
+
+
+    <!--吹き出しはじまり-->
+   <div class="comment">
+    <div class="balloon5">
+    <div class="faceicon">
+     <img src="images/ootaniyui.jpg" alt="" />
+    </div>
+    <div class="chatting">
+     <div class="says">
+      <p>夏になると各お祭りで必ずと言っていいほど流れます。踊りは残念ながら私はあまり覚えていませんが、簡単な振り付けなので周りの人を見ながらでも十分踊れますよ。それにしても制作者が本当に豪華なラインナップですね～初耳でした…。</p>
+     </div>
+    </div>
+    </div>
+   </div>
+   <!--吹き出し終わり-->
+
 
     <hr>
 
