--- a/page_ku.html
+++ b/page_ku.html
@@ -95,6 +95,20 @@
      </div>
 
 
+     <div class="balloon2-right">
+      <p> 「結の祭り」とは？</p>
+    </div>
+    <div class="hitokoto">
+     <p>蔵の辻で開かれる屋台やパフォーマンス！</p>
+    </div>
+    <div class="page-setumei">
+     <p>「結の祭り」は福井県出身の人や福井県に住んでいる人によって開かれているお祭りです。<br>
+    地元の食材を使った食べ物がでる屋台や、全国で活躍しているアーティストによる音楽やダンスのパフォーマンスを楽しむことができます。<br>
+    会場が大きくないぶん、目の前で見ることができるライブは注目です！
+     </p>
+    </div>
+
+
     </div>
 
     <!--吹き出しはじまり-->
