--- a/page_nn.html
+++ b/page_nn.html
@@ -118,7 +118,9 @@
       3.その上に新聞紙を張ります<br>
       4.せっこうを塗り固めます<br>
       5.乾くのを待ち、色を塗ります<br>
-      6.完成！
+      6.完成！<br>
+      <br>
+      北新庄自治振興会だよりより
      </p>
     </div>
 
