--- a/sankou.html
+++ b/sankou.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ひみつの暗号</title>
+  <title>越前かるた-参考・参照リンク一覧</title>
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="css/nav.css">
@@ -46,9 +46,216 @@
       <h1>--　参考・参照リンク一覧　--</h1>
     </div>
 
+    <br>
+
     <div class="content-body">
-     <div class="secretword">
-       <p>準備中</p>
+      <hr>
+     <div class="page-setumei">
+       <p>
+        ・特産品紹介｜越前しらやま活性化協議会<br>
+        http://www.echizen-shirayama.jp/tokusan/entry-29.html<br><br>
+        ・越前市多文化共生推進プラン<br>
+        http://www.city.echizen.lg.jp/office/010/130030/tabunkapuran_d/fil/pulanreiwa.pdf<br><br>
+        ・越前市にあるブラジル食品店「Mr.MARKET（ミスターマーケット）」は、異国情緒たっぷりのレア商品だらけ！！<br>
+        https://fupo.jp/article/%E8%B6%8A%E5%89%8D%E5%B8%82%E3%81%AE%E3%83%96%E3%83%A9%E3%82%B8%E3%83%AB%E9%A3%9F%E6%9D%90%E5%BA%97mr-market/<br><br>
+        ・越前打刃物とは｜越前打刃物の製造・開発・販売は龍泉刃物-RYUSEN<br>
+        https://ryusen-hamono.com/ryusen/echizenuchihamono.php<br><br>
+        ・タケフナイフビレッジ｜Takefu Knife Village｜越前市<br>
+        https://www.takefu-knifevillage.jp/<br><br>
+        ・越前打刃物｜福井の伝統工芸５つ星伝　越前ものづくりの里プロジェクト<br>
+        http://info.pref.fukui.lg.jp/tisan/monosato/uchihamono.html<br><br>
+        ・越前打刃物(えちぜんうちはもの)の特徴や歴史-KOUGEI JAPAN(コウゲイジャパン)<br>
+        https://kogeijapan.com/locale/ja_JP/echizenuchihamono/<br><br>
+        ・越前和紙(えちぜんわし)の特徴や歴史-KOUGEI JAPAN(コウゲイジャパン)<br>
+        https://kogeijapan.com/locale/ja_JP/echizenwashi/<br><br>
+        ・手仕事の職人巡り「越前和紙」編　越前市観光サイト｜和紙、打ち刃物、箪笥、手仕事のまち<br>
+        http://welcome-echizenshi.jp/tourism_detail/teshigoto-echizenwashi/?cid=26<br><br>
+        ・越前和紙の里｜紙すき体験/体験学習/見学/和紙の販売<br>
+        http://www.echizenwashi.jp/index.php<br><br>
+        ・越前和紙とは？その歴史と格式の高さは日本一！？【福井県の伝統工芸品】<br>
+        https://dearfukui.jp/industry/1352<br><br>
+        ・コウノトリが運ぶ、幸せの和を広げたい！～はく製を利用した環境教育の実施～<br>
+        https://www.furusato-tax.jp/gcf/305<br><br>
+        ・コウノトリ｜日本の鳥百科｜サントリーの愛鳥活動<br>
+        https://www.suntory.co.jp/eco/birds/encyclopedia/detail/1421.html<br><br>
+        ・コウノトリと越前市のかかわり-越前市<br>
+        http://www.city.echizen.lg.jp/office/060/020/kounotoritoechizensi.html<br><br>
+        ・コウノトリが舞う里づくり～これまでの歩み～-越前市<br>
+        http://www.city.echizen.lg.jp/office/060/020/satochisatoyama/nmausatodukuri.html<br><br>
+        ・かこさとし　公式webサイト<br>
+        https://kakosatoshi.jp/<br><br>
+        ・越前市かこさとしふるさと絵本館「石石(らく)」ホーム-越前市<br>
+        https://www.city.echizen.lg.jp/office/090/060/kakosatosi/ehonkan_home.html<br><br>
+        ・2020　たけふ菊人形<br>
+        http://xn--08j1a5d044nforx33c.com/<br><br>
+        ・たけふ菊人形-越前市<br>
+        http://www.city.echizen.lg.jp/kankou/kikuningyou/<br><br>
+        ・蔵の辻｜観光スポット｜福井県観光情報ホームページ　ふくいドットコム<br>
+        https://www.fuku-e.com/010_spot/?id=136<br><br>
+        ・蔵の辻／武生／越前市／福ふくガイド<br>
+        http://www.fuku2.co.jp/kanokyu.html<br><br>
+        ・福井県越前市　蔵の辻　結の祭り2018－日本の若者が企画する、新しいスタイルの祭りー<br>
+        https://www.genjapan.com/ja/blog/content/2392<br><br>
+       ・ 愛山荘<br>
+       http://aizanso.com/<br><br>
+       ・城福寺庭園―福井県越前市の国指定名勝庭園。｜庭園情報メディア[おにわさん]<br>
+       https://oniwa.garden/jofuku-ji-temple-garden-%E5%9F%8E%E7%A6%8F%E5%AF%BA%E5%BA%AD%E5%9C%92/<br><br>
+       ・城福寺(越前市)<br>
+       https://www.fukureki.com/etizrn/jyoufuku.html<br><br>
+       ・あじまの万葉祭り　越前市観光サイト｜和紙、打ち刃物、箪笥、手仕事のまち<br>
+       http://welcome-echizenshi.jp/tourism_detail/manyoumatsuri/<br><br>
+       ・万葉の里味真野苑-越前市<br>
+       https://www.city.echizen.lg.jp/office/060/050/040/ajimanoen.html<br><br>
+       ・日野川　(福井県)-Wikipedia<br>
+       https://ja.wikipedia.org/wiki/%E6%97%A5%E9%87%8E%E5%B7%9D_(%E7%A6%8F%E4%BA%95%E7%9C%8C)<br><br>
+       ・TOP｜日野川河川緑地公園<br>
+       https://e-parks.jp/hinogawa/<br><br>
+       ・あなたは区別できる？「一級河川」と「二級河川」の違い-スッキリ<br>
+       https://gimon-sukkiri.jp/ikkyu-kasen/<br><br>
+       ・三田村氏庭園―福井県越前市の国指定名勝庭園。｜庭園情報メディア[おにわさん]<br>
+       https://oniwa.garden/mitamura-garden-%E4%B8%89%E7%94%B0%E6%9D%91%E6%B0%8F%E5%BA%AD%E5%9C%92/<br><br>
+       ・国名勝に越前の三田村氏庭園　文化審議会答中―産業ニュース<br>
+       https://www.sankei.com/region/news/141124/rgn1411240040-n1.html<br><br>
+       ・回遊式庭園　京都通百科事典<br>
+       https://www.kyototuu.jp/Tradition/TeienKaiyuuTeien.html<br><br>
+       ・柳の滝｜観光スポット｜福井県観光情報ホームページ　ふくいドットコム<br>
+       https://www.fuku-e.com/010_spot/?id=509<br><br>
+       ・柳の滝：不動滝・お釜滝・布滝・窓滝・夫婦滝　越前市｜小幸の滝めぐり／ぶらり日記<br>
+       https://ameblo.jp/wakayama-koyukiblog/entry-12502272836.html<br><br>
+       ・佐々木小次郎のツバメ返し　福井県の民話＜福娘童話集　きょうの日本民話＞<br>
+       http://hukumusume.com/douwa/pc/minwa/07/04b.html<br><br>
+       ・福井県の文化財｜越前万歳<br>
+       http://info.pref.fukui.jp/bunka/bunkazai/sitei/mukeimin/hozonkai-echizenmanzai.html<br><br>
+       ・越前市<br>
+       http://ktmrj15.webcrow.jp/p18fk/pez18209anajizo.html<br><br>
+       ・福井県の越前市にある愛宕山へ登ってみた。｜福井しらべ<br>
+       https://azimano.info/archives/2473<br><br>
+       ・校区-越前市　吉野小学校<br>
+       http://school.city.echizen.lg.jp/yoshino/index.cfm/1,0,43,116,html<br><br>
+       ・大和國古墳墓取調室<br>
+       http://obito1.web.fc2.com/takefu.html http://obito1.web.fc2.com/takefu.html<br><br>
+       ・仁愛大学<br>
+       https://www.jindai.ac.jp/<br><br>
+       ・越前そばの里／福井県でお食事・そば打ち体験・そば工場見学<br>
+       https://www.echizensoba.co.jp/<br><br>
+       ・今が美味しい「越前おろし蕎麦」を食べるなら知っておきたい前情報｜観光・旅行ガイド<br>
+       https://gurutabi.gnavi.co.jp/a/a_2742/<br><br>
+       ・300年以上続く伝統行事山盛りごぼうを食べる「ごぼう講」株式会社まつの<br>
+       https://www.matuno.co.jp/vegeful/category/journal02/29202.html<br><br>
+       ・ごぼう講｜北陸の郷土食｜自然人ネット<br>
+       https://shizenjin.net/hokuriku_food/local-foods/file95.html<br><br>
+       ・廃線探索　福井鉄道南越線(歩鉄の達人)<br>
+       https://www.hotetu.net/haisen/HokurikuShinetu/120316fukuitetudounanetusen.html<br><br>
+       ・http://www.echizen.ne.jp/basyaku_kaidou/index.html<br><br>
+       ・府中馬借街道｜観光スポット｜福井県観光情報ホームページ　ふくいドットコム<br>
+       https://www.fuku-e.com/010_spot/?id=144<br><br>
+       ・福井県瓦工業協同組合<br>
+       https://www.f-kawara.jp/<br><br>
+       ・新谷窯業㈱越前瓦製品紹介<br>
+       http://www4.ttn.ne.jp/~shintnyg/<br><br>
+       ・http://www.city.echizen.lg.jp/office/060/050/teshigoto-machiaruki_d/fil/teshigotonomachiaruki3.pdf<br><br>
+       ・「ちひろのまれた家」記念館　越前市観光サイト｜和紙、打刃物、箪笥、手仕事のまち<br>
+       http://welcome-echizenshi.jp/tourism_detail/chihironoie/<br><br>
+       ・「ちひろの生まれた家」記念館<br>
+       http://chihironoie.jp/<br>
+       ・いわさきちひろについて｜いわさきちひろ記念事業団　公式サイト<br>
+       https://chihiro.jp/about/<br><br>
+       ・猫好きなら一度はお参りしたい！福井の猫寺「御誕生寺（ごたんじょうじ）」<br>
+       https://icotto.jp/presses/8803<br><br>
+       ・御誕生寺　越前市観光サイト｜和紙、打刃物、箪笥、手仕事のまち<br>
+       http://welcome-echizenshi.jp/tourism_detail/gotanjyouji/<br><br>
+       ・市民バス「のろっさ」－越前市<br>
+       https://www.city.echizen.lg.jp/office/030/015/shiminbasujikokuhyou.html<br><br>
+       ・越前市民バスのろっさ　519＆647：バス三昧<br>
+       https://busmania.exblog.jp/18939322/<br><br>
+       ・越前市の樹木達２<br>
+       http://ishike2007.web.fc2.com/20hokuriku/01fukui/03middle/01echizen_shi/echizen_shi2.html<br><br>
+       ・校庭の桜-越前市　味真野小学校<br>
+       http://school.city.echizen.lg.jp/ajimano/index.cfm/16,html<br><br>
+       ・味真野小学校の桜｜花見特集2020<br>
+       https://sp.jorudan.co.jp/hanami/spot_1513.html<br><br>
+       ・【福井】２０００人が踊りの輪　越前市でサマーフェスティバルが開幕｜中日旅行ナビ　ぶらっ人<br>
+       https://tabi.chunichi.co.jp/odekake/130814fukui_echizenshi.html<br><br>
+       ・紫式部公園-越前市<br>
+       https://www.city.echizen.lg.jp/office/070/020/kouen/murasaki.html<br><br>
+       ・紫式部公園－森蘊作庭…福井県越前市武生の庭園。｜庭園情報メディア[おにわさん]<br>
+       https://oniwa.garden/murasakishikibu-park-%E7%B4%AB%E5%BC%8F%E9%83%A8%E5%85%AC%E5%9C%92/<br><br>
+       ・かるた王国越前市-越前市<br>
+       https://www.city.echizen.lg.jp/office/090/030/karutaechizen.html<br><br>
+       ・競技かるた「王国」誕生の秘密　雪国福井が選手育てる？<br>
+       http://chihayafuru.club/archives/342<br><br>
+       ・5月27日は「百人一首の日」、話題の競技かるたとは？<br>
+       https://dot.asahi.com/print_image/index.html?photo=2017052900068_1<br><br>
+       ・越前箪笥(えちぜんたんす)の特徴や歴史-KOUGEI JAPAN(コウゲイジャパン)<br>
+       https://kogeijapan.com/locale/ja_JP/echizentansu/<br><br>
+       ・手仕事の職人巡り「越前箪笥」編　越前市観光サイト｜和紙、打ち刃物、箪笥、手仕事のまち<br>
+       http://welcome-echizenshi.jp/tourism_detail/teshigoto-echizentansu/?cid=26<br><br>
+       ・伝統工芸品『越前箪笥』とは？歴史や特徴を職人さんに聞きました【福井県の伝統工芸品】<br>
+       https://dearfukui.jp/industry/9475<br><br>
+       ・タンス町通り　越前市観光サイト｜和紙、打ち刃物、箪笥、手仕事のまち<br>
+       http://welcome-echizenshi.jp/tourism_detail/tansumachi/<br><br>
+       ・日野山-Wikipedia<br>
+       https://ja.wikipedia.org/wiki/%E6%97%A5%E9%87%8E%E5%B1%B1<br><br>
+       ・越前市の山々<br>
+       http://www.city.echizen.lg.jp/office/060/052/k-15.html<br><br>
+       ・越前市にある万葉の里　味真野苑の旧谷口家住宅へ行ってみた。どんな場所？｜福井しらべ<br>
+       https://azimano.info/archives/6806<br><br>
+      ・越前市サマーフェスティバル2019<br>
+      http://welcome-echizenshi.jp/summer-festival/<br><br>
+      ・【2020年中止】越前市サマーフェスティバル花火大会｜花火大会2020<br>
+      https://sp.jorudan.co.jp/hanabi/spot_87293.html<br><br>
+      ・梅花藻(治左川)　越前市観光サイト｜和紙、打ち刃物、箪笥、手仕事のまち<br>
+      http://welcome-echizenshi.jp/tourism_detail/baikamo/<br><br>
+      ・(公式)しきぶ温泉　湯楽里(ゆらり)　福井県越前市　公共の宿<br>
+      http://yurari-yu.jp/tourism/<br><br>
+      ・しきぶ温泉『湯楽里』- 越前市<br>
+      https://www.city.echizen.lg.jp/office/050/010/onsenyurari.html<br><br>
+      ・たけのっ子劇場 - 越前市<br>
+      https://www.city.echizen.lg.jp/office/010/130030/siminkatudoudantai/takenokkogekijyou.html<br><br>
+      ・福井生まれの「ボルガライス」は洋食の最強コラボ!?おすすめ3店に行ってきました<br>
+      https://gurutabi.gnavi.co.jp/a/a_1658/<br><br>
+      ・越前市三大グルメ「中華そば」-越前市<br>
+      http://www.city.echizen.lg.jp/office/060/052/chuukasoba.html<br><br>
+      ・花筐公園　越前市観光サイト｜和紙、打ち刃物、箪笥、手仕事のまち<br>
+      http://welcome-echizenshi.jp/tourism_detail/kakyoukouen/	<br><br>
+      ・花筐公園見どころMAP-越前市<br>
+      https://www.city.echizen.lg.jp/office/070/020/kakyoumidokoro.html<br><br>
+      ・はながたみもみじ祭り　越前市観光サイト｜和紙、打ち刃物、箪笥、手仕事のまち<br>
+      http://welcome-echizenshi.jp/tourism_detail/momijimatsuri/<br><br>
+      ・はながたみまつり　越前市観光サイト｜和紙、打ち刃物、箪笥、手仕事のまち<br>
+      http://welcome-echizenshi.jp/tourism_detail/hanagatamimatsuri/<br><br>
+      ・紙祖神岡太神社・大瀧神社　越前市観光サイト｜和紙、打ち刃物、箪笥、手仕事のまち<br>
+      http://welcome-echizenshi.jp/tourism_detail/okamoto-ootaki/<br><br>
+      ・福井県の製紙の神を祀る大滝神社・岡太神社はどんな場所？ポイントは？｜福井しらべ<br>
+      https://azimano.info/archives/4232<br><br>
+      ・岡太神社・大瀧神社　～紙の神様をまつる唯一の神社、日本一複雑な社殿建築～<br>
+      https://okumiya-jinja.com/interview/interview044/<br><br>
+      ・武生公会堂記念館　越前市観光サイト｜和紙、打ち刃物、箪笥、手仕事のまち<br>
+      http://welcome-echizenshi.jp/tourism_detail/takefu-koukaidou-kinenkan/<br><br>
+      ・http://www.echizen.ne.jp/m/walk/osyouzu.html<br><br>
+      ・【越前市のお清水不動尊の水】有名なおいしい水とそば屋さん。｜福井しらべ<br>
+      https://azimano.info/archives/7469<br><br>
+      ・「ふくいのおいしい水」の認定について｜福井県ホームページ<br>
+      https://www.pref.fukui.lg.jp/doc/kankyou/water/goodwater.html<br><br>
+      ・市章・市の木・市の花 – 越前市<br>
+      http://www.city.echizen.lg.jp/office/010/010/menu/sisyo-sinoki-hana.html<br><br>
+      ・越前市市章について<br>
+      https://www1.g-reiki.net/echizen-city/reiki_honbun/r290RG00000004.html<br><br>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+       </p>
      </div>
 
     </div>
