--- a/index.html
+++ b/index.html
@@ -89,6 +89,11 @@ auto: true,
       </div>
 
 
+      <div class="ehd">
+        <p><img src="images/絵札一覧.png" ait=""></p>
+       </div>
+
+
        <div class="button">
          <a href="menu.html" class="btn-flat-double-border">かるた一覧はこちら</a>
        </div>
