--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ auto: true,
       </div>
 
 
-      <div class="ehd">
+      <div class="setumei">
         <p><img src="images/絵札一覧.png" ait=""></p>
        </div>
 
