--- a/page_a.html
+++ b/page_a.html
@@ -84,12 +84,13 @@
       <p>どのくらい大きいの？</p>
     </div>
     <div class="hitokoto">
-     <p>直径が約15㎝！</p>
+     <p>大きいものだと約11㎏！</p>
     </div>
     <div class="page-setumei">
      <p>
        畑で作物を栽培するときに、細長くまっすぐ土を盛り上げる畝(うね)という部分がありますが、しらやま西瓜はその幅が約6ｍ！<br>
-       その中でも収穫するのは2~3個なので、しらやま西瓜の大きさが分かりますね！
+       その中でも収穫するのは2~3個なので、しらやま西瓜の大きさが分かりますね！<br>
+       11㎏というと、大体2歳の子どもと同じくらい…？
      </p>
     </div>
 
