--- a/page_ho.html
+++ b/page_ho.html
@@ -71,7 +71,7 @@
       <p>「かるた王国越前市」と呼ばれているほど、越前市民は百人一首が大好き！</p>
      </div>
      <div class="shasin">
-       <img src="pageimages/百人一首.jpg.crdownload">
+       <img src="pageimages/百人一首.jpg">
      </div>
      <div class="page-setumei">
       <p>
