--- a/page_ka.html
+++ b/page_ka.html
@@ -95,8 +95,8 @@
     <div class="page-setumei">
      <p>
       加古里子（かこ さとし）<br>
-      1926年現在の福井県越前市に生まれました。<br>
-      児童文化の研究者でもあり、現在は出版を中心に幅広く活躍しています。<br>
+      1926年、今の福井県越前市に生まれました。<br>
+      工学博士＆技術士（化学）で、児童文化の研究者でもあり、晩年は出版を中心に幅広く活躍していましたが、2018年5月に92歳でこの世を去りました。<br>
       <br>
       代表作<br>
       ・『からすのパンやさん』<br>
