--- a/page_o.html
+++ b/page_o.html
@@ -76,11 +76,9 @@
      </div>
 
      <div class="page-setumei">
-      <p>越前市の市鳥に指定されているコウノトリ。
+      <p>越前市の市の鳥に指定されているコウノトリ。
        <br>
        国の特別天然記念物にも指定されており、越前市では主に白山地区で取り組みが行われています。
-       <br>
-       昭和54年に刃物としては初の伝統工芸品の指定を受けました。（全体では105番目）
       </p>
      </div>
 
